unpackaged/main/default/objects/Talx__c/Talx__c.object-meta.xml
<CustomObject>
    <label>Talx</label>
    <nameField>
        <displayFormat>TAX-{0000000}</displayFormat>
        <label>Talx Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Talxs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>