unpackaged/main/default/objects/Talx__c/fields/Employeer__c.field-meta.xml
<CustomField>
    <fullName>Employeer__c</fullName>
    <label>Employeer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>