unpackaged/main/default/objects/Talx__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to identify the current active response record for an application</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>