unpackaged/main/default/objects/Talx__c/fields/Length_of_Employement__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Employement__c</fullName>
    <label>Length of Employement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>