unpackaged/main/default/objects/Talx__c/fields/Talx_Response__c.field-meta.xml
<CustomField>
    <fullName>Talx_Response__c</fullName>
    <description>This field will store the entire unparsed talx response as it is received from talx</description>
    <label>Talx Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>