unpackaged/main/default/objects/Talx__c/fields/TalxRequestLogging__c.field-meta.xml
<CustomField>
    <fullName>TalxRequestLogging__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the look up to TalxRequestLogging__c - to link talx request and response</description>
    <label>TalxRequestLogging</label>
    <referenceTo>TalxRequestLogging__c</referenceTo>
    <relationshipLabel>Talxs</relationshipLabel>
    <relationshipName>Talxs</relationshipName>
    <type>Lookup</type>
</CustomField>