unpackaged/main/default/objects/Talx__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Account__c</columns>
    <columns>Salary__c</columns>
    <columns>Employeer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application__c</field>
        <operation>equals</operation>
        <value>APP-0001390069</value>
    </filters>
    <label>All</label>
</ListView>